--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,12 @@ dependencies:
   hooks_riverpod: ^1.0.4
   cloud_firestore: ^3.1.17
   firebase_core: ^1.17.1
+  freezed_annotation: ^2.0.3
+  uuid: ^3.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
